--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "webpack-server-dev": "webpack-dev-server --mode development --open --config ./webpack/webpack.dev.js",
     "start": "yarn run webpack-server-dev",
-    "build": "yarn run webpack --config ./webpack/webpack.dev.js"
+    "build": "yarn run webpack --config ./webpack/webpack.dev.js",
+    "push": "yarn run build && cp -ri ./dist ./repository && git add --all && git commit -m 'cmd push' && git push"
   },
   "eslintConfig": {
     "extends": "react-app"
