--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "react-markdown": "^4.0.6"
   },
   "scripts": {
-    "webpack-server-dev": "webpack-dev-server --mode development --open --config ./webpack/webpack.dev.js",
-    "start": "yarn run webpack-server-dev",
+    "__clone": "git clone https://github.com/baleliu/baleliu.github.io.git repository",
+    "__mkdir": "mkdir new_repository && mkdir new_repository/\\.git/ && cp -rf repository/\\.git/ new_repository/\\.git/ && rm -rf repository && mv new_repository/ repository/ ",
+    "__push": "cd repository && git pull && cp -rf ../dist/* . && git add --all && git commit -m 'cmd push' && git push",
+    "__server": "webpack-dev-server --mode development --open --config ./webpack/webpack.dev.js",
+    "start": "yarn run __server",
     "build": "yarn run webpack --config ./webpack/webpack.dev.js",
-    "pull": "rm -rf ./repository && git clone https://github.com/baleliu/baleliu.github.io.git repository",
-    "push": "yarn run build && cd repository && git pull && cp -rf ../dist/* . && git add --all && git commit -m 'cmd push' && git push"
+    "pull": "rm -rf ./repository && yarn run __clone",
+    "push": "yarn run build && yarn run __mkdir && yarn run __push"
+
   },
   "eslintConfig": {
     "extends": "react-app"
