--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "antd": "^3.13.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-markdown": "^4.0.6"
+    "react-markdown": "^4.0.6",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "__clone": "git clone https://github.com/baleliu/baleliu.github.io.git repository",
@@ -15,9 +17,9 @@
     "__server": "webpack-dev-server --mode development --open --config ./webpack/webpack.dev.js",
     "start": "yarn run __server",
     "build": "yarn run webpack --config ./webpack/webpack.dev.js",
+    "build-prod": "yarn run webpack --config ./webpack/webpack.prod.js",
     "pull": "rm -rf ./repository && yarn run __clone",
-    "push": "yarn run build && yarn run __mkdir && yarn run __push"
-
+    "push": "yarn run build-prod && yarn run __mkdir && yarn run __push"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,22 +33,28 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@types/node": "^11.9.5",
     "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
+    "babel-preset-es2015": "^6.24.1",
+    "bundle-loader": "^0.5.6",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
     "extract-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
