--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
     "antd": "^3.13.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -13,13 +14,14 @@
   "scripts": {
     "__clone": "git clone https://github.com/baleliu/baleliu.github.io.git repository",
     "__mkdir": "mkdir new_repository && mkdir new_repository/\\.git/ && cp -rf repository/\\.git/ new_repository/\\.git/ && rm -rf repository && mv new_repository/ repository/ ",
-    "__push": "cd repository && git pull && cp -rf ../dist/* . && git add --all && git commit -m 'cmd push' && git push",
-    "__server": "webpack-dev-server --mode development --open --config ./webpack/webpack.dev.js",
-    "start": "yarn run __server",
-    "build": "yarn run webpack --config ./webpack/webpack.dev.js",
-    "build-prod": "yarn run webpack --config ./webpack/webpack.prod.js",
+    "__push": "git push",
+    "__commit": "cd repository && git pull && cp -rf ../dist/* . && git add --all && git commit -m 'cmd push'",
+    "__serve": "webpack-dev-server --mode development --open --config ./webpack/serve.dev.js",
+    "start": "yarn run __serve",
+    "build": "yarn run webpack --config ./webpack/build.dev.js",
+    "build-prod": "yarn run webpack --config ./webpack/build.prod.js",
     "pull": "rm -rf ./repository && yarn run __clone",
-    "push": "yarn run build-prod && yarn run __mkdir && yarn run __push"
+    "push": "yarn run build-prod && yarn run __mkdir && yarn run __commit && yarn run __push"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +40,7 @@
     "@types/node": "^11.9.5",
     "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-es2015": "^6.24.1",
@@ -50,6 +53,7 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^4.1.0",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
