--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "antd": "^3.13.6",
+    "nprogress": "^0.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-markdown": "^4.0.6",
