update:添加目录重命名 add:延迟加载封装 update:优化webpack配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es6",
     "rootDir": "src",
     "lib": [
-      "dom", "es6"
+      "dom",
+      "es6"
     ],
     "allowJs": true,
     "skipLibCheck": true,
