--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "antd": "^3.13.6",
+    "highlight.js": "^9.15.6",
     "markdown-it": "^8.4.2",
     "nprogress": "^0.2.0",
     "react": "^16.8.3",
